<resources>
    <string name="app_name">Loja CRM</string>
    <string name="artigos">Artigos</string>
    <string name="login">Login</string>
    <string name="referencia">Referência</string>
    <string name="preco">Preço</string>
    <string name="stock">Stock</string>
    <string name="descricao">Descrição</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="id_categoria">ID Categoria</string>
    <string name="id_iva">ID Iva</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faturas">Faturas</string>
    <string name="ivas">Ivas</string>
    <string name="categorias">Categorias</string>
    <string name="gest_dados">Gestão de dados</string>
    <string name="carrinho">Carrinho de compras</string>
    <string name="historico">Histórico de compras</string>
    <string name="areacliente">Área cliente</string>
    <string name="compras">Compras</string>
    <string name="users">Utilizadores</string>
    <string name="inicial">Página inicial</string>
    <string name="logout">Terminar sessão</string>
    <string name="password">Palavra-passe</string>
    <string name="username">Nome de utilizador</string>
    <string name="config_server">Configuração do Servidor</string>
    <string name="endereco_server">Endereço do servidor</string>
    <string name="enviar">Enviar</string>
    <string name="bem_vindo">Bem-Vindo à CRM</string>
    <string name="descricao_inicial">A loja de materiais de contrução</string>
    <string name="percentagem">Percentagem</string>
    <string name="quantidade">Quantidade</string>
    <string name="id_user">Id Utilizador</string>
    <string name="valor_total">Valor Total</string>
    <string name="data">Data</string>
    <string name="nif">NIF</string>
    <string name="user">Username</string>
    <string name="id_utilizador">Id Utilizador:</string>
    <string name="valor_iva">Valor Iva:</string>
    <string name="valor">Valor:</string>
    <string name="estado">Estado:</string>
    <string name="valor_total_">Valor Total:</string>
    <string name="data_">Data:</string>
    <string name="remover">Remover</string>
    <string name="anular_fatura">Anular Fatura</string>
    <string name="estado_">Estado</string>
    <string name="refer_ncia">Referência:</string>
    <string name="descri_o">Descrição:</string>
    <string name="pre_o">Preço:</string>
    <string name="stock_">Stock:</string>
    <string name="id_caregoria">Id Caregoria:</string>
    <string name="id_iva_">Id Iva:</string>
    <string name="dados_do_carrinho">Dados do Carrinho</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="adicionar_ao_carrinho">Adicionar ao Carrinho</string>
    <string name="insira_quant">Insira a quantidade</string>
    <string name="quantidade_">Quantidade:</string>
    <string name="linhas_do_carrinho">Linhas do carrinho</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="quantidade__">Quantidade:</string>
    <string name="descricao_inicial_">A Loja de Materiais de Construção</string>
    <string name="id_artigo">ID Artigo:</string>
    <string name="refer_ncia_">Referência</string>
    <string name="id_carrinho">ID Carrinho:</string>
    <string name="id_artigo__">Id Artigo</string>
    <string name="criar_carrinho">Criar Carrinho</string>
    <string name="artigo">Artigo</string>
    <string name="quantidade___">Quantidade</string>
    <string name="guardar">Guardar</string>
    <string name="insira_a_quantidade">Insira a quantidade</string>
    <string name="sub_total">Sub Total:</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="alterar_linha_do_carrinho">Alterar Linha do Carrinho</string>
    <string name="dados_da_fatura">Dados da Fatura</string>
    <string name="dados_do_iva">Dados do Iva</string>
    <string name="dados_da_categoria">Dados da Categoria</string>
    <string name="dados_do_artigo">Dados do Artigo</string>
    <string name="categoria">Categoria:</string>
    <string name="iva">Iva:</string>
</resources>